# pii-remover-analyser

./: .gitignore  DOCKERFILE  Dockerfile  README.md  better_ui.py  custom_types.py  gemini_data_analyzer.py  generate_ppt.py  helpers.py  image.py  index.py  json_to_dict.py  main.py  packages.txt  pii_remover.py  pipeline.py  presidio_nlp_engine_config.py  pyproject.toml  requirements.txt  streamlit_app.py  system_design  test_streamlit.py  things.json  things_left.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: docker-image.yml  python-app.yml
docs/: system-design-prompt.md
extras/: something.py
helpers/: presidio_nlp_engine_config.py
src/: better_ui.py  gemini_data_analyzer.py  generate_ppt.py  helpers.py  models.py  pii_remover.py  pipeline.py  presidio_nlp_engine_config.py  streamlit_app.py
src/extras/: data.json  gemini_sample_analysis_return.json
src/patterns/: emp.yaml  token.yaml
utilities/: gemini_data_analyzer.py  gemini_sample_analysis_return.json
