[project]
name = "pii-remover-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "pip>=25.2",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "presidio-image-redactor>=0.0.57",
    "st-annotated-text>=4.0.2",
    "streamlit>=1.49.1",
    "streamlit-tags>=1.2.8",
]
